// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatMemoPrompt should generate prompt with exercise memo 1`] = `
"あなたはフィットネスコーチのアシスタントです。音声から得られたトレーニングメモを読みやすく整理してください。

音声入力: "ベンチプレスのフォームが良くなった気がする。次回はもう少し重量を上げてみよう"

関連種目: ベンチプレス
メモ内容: "ベンチプレスのフォームが良くなった気がする。次回はもう少し重量を上げてみよう"

以下の観点で整理された文章を返してください:

1. 体調・感覚の記録
2. フォームや技術的な気づき
3. 今後の改善点や目標
4. その他の重要な観察

要求:
- 簡潔で読みやすい日本語
- 箇条書きまたは短い段落形式
- トレーニング日誌として有用な情報を強調
- 200文字以内で要約
- 不要な情報は省略"
`;

exports[`formatMemoPrompt should generate prompt with general training memo 1`] = `
"あなたはフィットネスコーチのアシスタントです。音声から得られたトレーニングメモを読みやすく整理してください。

音声入力: "今日は調子が悪かった。肩が痛い"

関連種目: 不明
メモ内容: "今日は調子が悪かった。肩が痛い"

以下の観点で整理された文章を返してください:

1. 体調・感覚の記録
2. フォームや技術的な気づき
3. 今後の改善点や目標
4. その他の重要な観察

要求:
- 簡潔で読みやすい日本語
- 箇条書きまたは短い段落形式
- トレーニング日誌として有用な情報を強調
- 200文字以内で要約
- 不要な情報は省略"
`;

exports[`formatMemoPrompt should generate prompt with long memo content 1`] = `
"あなたはフィットネスコーチのアシスタントです。音声から得られたトレーニングメモを読みやすく整理してください。

音声入力: "デッドリフトの練習をした。腰の位置に注意してフォームを確認。重量は前回より5kg増量できた。次回はさらに技術を磨いていきたい"

関連種目: デッドリフト
メモ内容: "デッドリフトの練習をした。腰の位置に注意してフォームを確認。重量は前回より5kg増量できた。次回はさらに技術を磨いていきたい"

以下の観点で整理された文章を返してください:

1. 体調・感覚の記録
2. フォームや技術的な気づき
3. 今後の改善点や目標
4. その他の重要な観察

要求:
- 簡潔で読みやすい日本語
- 箇条書きまたは短い段落形式
- トレーニング日誌として有用な情報を強調
- 200文字以内で要約
- 不要な情報は省略"
`;
